<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity">


    </fragment>


    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_boarder">

        <ImageButton
            android:id="@+id/btn_full_screen_map"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_above="@id/info_tab"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/screen_expansion_button"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_full_screen_black_24dp" />


        <RelativeLayout
            android:id="@+id/info_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">


            <Button
                android:id="@+id/change_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/green1"
                android:padding="5dp"
                android:text="@string/go_live"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/connect_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/change_btn"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/green1"
                android:padding="5dp"
                android:text="@string/connects"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/nav_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/connect_view"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:background="?android:attr/windowBackground"
                app:itemIconTint="@color/green1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:menu="@menu/bottom_nav" />

            <EditText
                android:id="@+id/input_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:textSize="15sp"
                tools:visibility="gone" />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>