<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/relative_layout_background"
    tools:context=".FashionDesignerDashboard">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav" />

    <Button
        android:id="@+id/fd_logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_button3"
        android:text="Log out"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:clipToPadding="false"
        android:foregroundGravity="center"
        android:overScrollMode="never"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fashiondashBoardConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initConect"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fashiondashboardWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:text="@string/initWalletValue"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fashiondashBoardConnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fashionratingDashBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/dashBoardRating"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/fashiondashboardWallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/withdrawal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_button3"
        android:text="Make Withdrawals"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/withdrawal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/upload_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="Upload"
            android:textColor="#fff" />

        <Button
            android:id="@+id/delete_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/online_red"
            android:text="Delete"
            android:textColor="#fff" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>